--- a/index.html
+++ b/index.html
@@ -3,58 +3,292 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Phoenix Links</title>
+  <meta name="theme-color" content="#0b1220" />
+  <title>Lokesh | Links</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Lokesh - Aspiring gen AI engineer | vibe coder. Find all my links here." />
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    :root{
+      --bg: #070b14;
+      --card: rgba(255,255,255,0.09);
+      --card2: rgba(255,255,255,0.06);
+      --border: rgba(255,255,255,0.14);
+      --text: rgba(255,255,255,0.92);
+      --muted: rgba(255,255,255,0.65);
+      --shadow: 0 25px 70px rgba(0,0,0,0.55);
+      --radius: 22px;
+    }
+
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      color: var(--text);
+      background: var(--bg);
+      overflow-x:hidden;
+    }
+
+    /* Background image (bg.jpg) */
+    .bg{
+      position:fixed;
+      inset:0;
+      background-image:
+        linear-gradient(140deg, rgba(0,0,0,0.72), rgba(0,0,0,0.35), rgba(0,0,0,0.82)),
+        url("bg.jpg");
+      background-size: cover;
+      background-position: center;
+      transform: scale(1.02);
+      z-index:-3;
+    }
+
+    /* Soft bokeh */
+    .bokeh{
+      position:fixed;
+      inset:-20%;
+      background:
+        radial-gradient(circle at 30% 20%, rgba(80,150,255,0.35), transparent 35%),
+        radial-gradient(circle at 80% 35%, rgba(255,120,200,0.28), transparent 35%),
+        radial-gradient(circle at 55% 85%, rgba(80,255,210,0.20), transparent 40%);
+      filter: blur(60px);
+      z-index:-2;
+      opacity:.9;
+      animation: float 10s ease-in-out infinite alternate;
+    }
+
+    @keyframes float{
+      from{transform: translate3d(-15px, -15px, 0)}
+      to{transform: translate3d(15px, 18px, 0)}
+    }
+
+    /* Grain */
+    .grain{
+      position:fixed;
+      inset:0;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='220' height='220'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='220' height='220' filter='url(%23n)' opacity='.35'/%3E%3C/svg%3E");
+      mix-blend-mode: overlay;
+      opacity: .12;
+      z-index:-1;
+      pointer-events:none;
+    }
+
+    main{
       min-height: 100vh;
-      margin: 0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding: 40px 16px;
     }
-    .card {
-      width: 360px;
-      background: #111827;
-      padding: 30px;
-      border-radius: 16px;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,.4);
+
+    .card{
+      width:min(440px, 100%);
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, var(--card), var(--card2));
+      border: 1px solid var(--border);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
+      padding: 26px;
+      position:relative;
+      overflow:hidden;
+      animation: pop .6s ease both;
     }
-    img {
-      width: 90px;
-      height: 90px;
+
+    @keyframes pop{
+      from{opacity:0; transform: translateY(16px) scale(.98)}
+      to{opacity:1; transform: translateY(0) scale(1)}
+    }
+
+    .shine{
+      position:absolute;
+      inset:auto -40% -35% -40%;
+      height: 200px;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,.16), transparent);
+      transform: rotate(-10deg);
+      filter: blur(3px);
+      animation: shine 4.5s ease-in-out infinite;
+      pointer-events:none;
+    }
+    @keyframes shine{
+      0%{transform: translateX(-50%) rotate(-10deg)}
+      60%{transform: translateX(60%) rotate(-10deg)}
+      100%{transform: translateX(60%) rotate(-10deg)}
+    }
+
+    .top{
+      display:flex;
+      align-items:center;
+      gap: 16px;
+      margin-bottom: 18px;
+    }
+
+    .avatar{
+      width: 74px;
+      height: 74px;
       border-radius: 50%;
+      overflow:hidden;
+      border: 2px solid rgba(255,255,255,0.22);
+      box-shadow: 0 14px 35px rgba(0,0,0,.35);
+      flex: 0 0 auto;
+    }
+    .avatar img{
+      width:100%;
+      height:100%;
       object-fit: cover;
     }
-    h1 { margin: 15px 0 5px; font-size: 22px; }
-    p { margin: 0 0 20px; color: #cbd5e1; }
-    a {
-      display: block;
-      background: #1e293b;
-      text-decoration: none;
-      color: white;
-      padding: 12px;
-      margin: 12px 0;
-      border-radius: 12px;
-      font-weight: bold;
-      transition: 0.2s;
+
+    h1{
+      font-size: 24px;
+      margin:0;
+      letter-spacing: .2px;
     }
-    a:hover { background: #2563eb; }
+
+    .bio{
+      margin:6px 0 0;
+      color: var(--muted);
+      font-size: 14px;
+      line-height: 1.4;
+    }
+
+    .links{
+      display:flex;
+      flex-direction:column;
+      gap: 12px;
+      margin-top: 18px;
+    }
+
+    .btn{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding: 14px 16px;
+      border-radius: 16px;
+      text-decoration:none;
+      color: white;
+      border: 1px solid rgba(255,255,255,0.12);
+      background: rgba(0,0,0,0.20);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
+      transition: transform .2s ease, background .2s ease, border .2s ease;
+    }
+
+    .btn:hover{
+      transform: translateY(-2px) scale(1.01);
+      background: rgba(255,255,255,0.10);
+      border: 1px solid rgba(255,255,255,0.22);
+    }
+
+    .left{
+      display:flex;
+      gap: 12px;
+      align-items:center;
+      font-weight: 600;
+    }
+
+    .icon{
+      width: 40px;
+      height: 40px;
+      border-radius: 12px;
+      display:grid;
+      place-items:center;
+      background: rgba(255,255,255,0.10);
+      border: 1px solid rgba(255,255,255,0.12);
+    }
+
+    .arrow{
+      opacity:.8;
+      font-size: 18px;
+    }
+
+    .footer{
+      text-align:center;
+      margin-top: 18px;
+      font-size: 12px;
+      color: rgba(255,255,255,0.55);
+    }
+
+    /* Small screen */
+    @media (max-width: 420px){
+      .card{padding:20px}
+      h1{font-size:22px}
+    }
   </style>
 </head>
-<body>
-  <div class="card">
-    <img src="https://via.placeholder.com/150" alt="profile" />
-    <h1>Phoenix</h1>
-    <p>Developer | Creator</p>
 
-    <a href="https://instagram.com/">Instagram</a>
-    <a href="https://linkedin.com/">LinkedIn</a>
-    <a href="https://github.com/">GitHub</a>
-    <a href="https://yourwebsite.com/">Portfolio</a>
-  </div>
+<body>
+  <!-- IMPORTANT: Put your uploaded photo as bg.jpg -->
+  <div class="bg"></div>
+  <div class="bokeh"></div>
+  <div class="grain"></div>
+
+  <main>
+    <section class="card">
+      <div class="shine"></div>
+
+      <div class="top">
+        <div class="avatar">
+          <!-- avatar.jpg can be same as bg.jpg OR a separate image -->
+          <img src="avatar.jpg" alt="Lokesh profile">
+        </div>
+
+        <div>
+          <h1>Lokesh</h1>
+          <p class="bio">Aspiring gen AI engineer | vibe coder</p>
+        </div>
+      </div>
+
+      <div class="links">
+        <a class="btn" href="https://www.linkedin.com/in/lokesh-k--" target="_blank">
+          <div class="left">
+            <div class="icon">in</div>
+            <span>LinkedIn</span>
+          </div>
+          <span class="arrow">›</span>
+        </a>
+
+        <a class="btn" href="https://www.hackerrank.com/profile/lokeshnix" target="_blank">
+          <div class="left">
+            <div class="icon">H</div>
+            <span>HackerRank</span>
+          </div>
+          <span class="arrow">›</span>
+        </a>
+
+        <a class="btn" href="https://github.com/PHOENIXxXTM" target="_blank">
+          <div class="left">
+            <div class="icon">GH</div>
+            <span>GitHub</span>
+          </div>
+          <span class="arrow">›</span>
+        </a>
+
+        <a class="btn" href="https://phoenixdev07.vercel.app/" target="_blank">
+          <div class="left">
+            <div class="icon">🌐</div>
+            <span>Portfolio</span>
+          </div>
+          <span class="arrow">›</span>
+        </a>
+
+        <a class="btn" href="https://www.instagram.com/lokesh.nix" target="_blank">
+          <div class="left">
+            <div class="icon">IG</div>
+            <span>Instagram</span>
+          </div>
+          <span class="arrow">›</span>
+        </a>
+      </div>
+
+      <div class="footer">
+        Made with ❤️ by Lokesh
+      </div>
+    </section>
+  </main>
 </body>
 </html>
