--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     onerror="this.src='https://ui-avatars.com/api/?name=Lokesh&background=1a1a1a&color=fff&size=200'">
                 <div class="status-badge" title="Online / Open to Work"></div>
             </div>
-            <h1>Lokesh</h1>
+            <h1>Lokesh’s Profile</h1>
             <p class="tagline">Aspiring Gen AI Engineer</p>
             <div class="tags-row">
                 <span class="tag">AI Automations</span>
