Fix portfolio link URL in index.html

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             </a>
 
             <!-- Portfolio - Lokesh Nix -->
-            <a href="https://www.nixflows.com//" target="_blank" class="link-item">
+            <a href="https://www.nixflows.com/" target="_blank" class="link-item">
                 <div class="icon-box">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round">
